API向き先変更

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_BASE_URL=https://main.d3tlub2vftp19k.amplifyapp.com/
+NEXT_PUBLIC_API_BASE_URL=https://0esdglm36f.execute-api.ap-northeast-1.amazonaws.com/prod/wakkason-demo-api/
